# solana-airdrop

./: .gitignore  Anchor.toml  Cargo.toml  README.md  copy_idl.sh  developer.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
api/: DirectDistributeAirdropProvider.ts  NonceVerifyProvider.ts  SolanaAirdropProvider.ts  baseTypes.ts  utils.ts
docs/: airdrop-design.drawio  developer.md  solana-airdrop-arch.puml  solana-nonce-verify-arch.puml  用户主动申领空投-合约及交互设计.md  直接分发空投-合约及交互设计.md
idls/: nonce_verify.json
programs/direct-distribute-airdrop/: Cargo.toml
programs/direct-distribute-airdrop/src/: constants.rs  errors.rs  lib.rs
programs/direct-distribute-airdrop/src/instructions/: claim_fee.rs  dda_airdrop_ft.rs  init_dda_airdrop_project.rs  init_singleton_manage_project.rs  mod.rs  transfer_dda_mint_authority.rs  update_dda_airdrop_project.rs  update_singleton_manage_project.rs
programs/nonce-verify/: Cargo.toml
programs/nonce-verify/src/: constants.rs  errors.rs  lib.rs
programs/solana-airdrop/: Cargo.toml
programs/solana-airdrop/src/: constants.rs  errors.rs  lib.rs  outer_program.rs
programs/solana-airdrop/src/instructions/: claim_ft.rs  close_airdrop.rs  initialize_airdrop.rs  mod.rs  transfer_mint_authority.rs
rust_app/sign_checker/: Cargo.toml
rust_app/sign_checker/src/: main.rs
tests/: solana-airdrop.ts  utils.ts
tests/direct-distribute-airdrop/: direct-distribute-airdrop.test.ts
tests/nonce-verify/: nonce-verify.test.ts  utils.ts
tests/solana-airdrop/: solana-airdrop.test.ts
(+8 files in other folders)
